--- a/tests/doc/Todo
+++ b/tests/doc/Todo
@@ -1,6 +1,6 @@
 Dependencies:
     remove symfony/symfony fixed to 3.4.4, error on 3.4.5 app_dev.php ajax
-
+    "se/selenium-server-standalone": "3.8.*" -> 3.9.* don't support "-enablePassThrough false"
 Tests:
     test su ordinamento campi definiti da utente
     test su stampa campi definiti da utente
