--- a/tests/doc/Todo
+++ b/tests/doc/Todo
@@ -1,5 +1,8 @@
+Fixed symfony/makerbundle 1.5.*, dalla 1.6.* non funziona più il regenerate entity
+
 Dependencies:
     "se/selenium-server-standalone": "3.8.*" -> 3.9.* don't support "-enablePassThrough false"
+    
 Tests:
     test su ordinamento campi definiti da utente
     test su stampa campi definiti da utente
