--- a/tests/doc/Todo
+++ b/tests/doc/Todo
@@ -2,6 +2,8 @@ Fixed symfony/makerbundle 1.5.*, dalla 1.6.* non funziona più il regenerate ent
 
 Dependencies:
     "se/selenium-server-standalone": "3.8.*" -> 3.9.* don't support "-enablePassThrough false"
+    "enm1989/geckodriver" is abandoned, you should avoid using it. No replacement was suggested.
+    "phpoffice/phpexcel" is abandoned, you should avoid using it. Use phpoffice/phpspreadsheet instead.
     
 Tests:
     test su ordinamento campi definiti da utente
@@ -11,9 +13,6 @@ Funzionalità:
 
 
 Upgrade:
-    Php 7.2
-    Silex
-    MakerBundle
     Jquery + Jquery-ui + griglia
     excel -> PHPOffice/PhpSpreadsheet
 
